fix for logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4906,7 +4906,8 @@ b, strong {
     margin-top: 30px;
   }
   .content_15 {
-    padding-top: 150px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
   .content_15 h2 {
     font-size: 42px;
